<!--
  ~ Created by Albert Kristaen (s6joxx) on 2/10/21, 9:45 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 10/22/20, 11:34 AM
  -->

<resources>
    <string name="app_name">Pinjam Aja!</string>
    <string name="splash_title">PINJAM AJA!</string>
    <string name="splash_subtittle">KEMUDAHAN PINJAMAN DALAM GENGGAMAN</string>
    <string name="splash_logo">Pinjam Aja! Logo</string>
    <string name="button_next">NEXT</string>
    <string name="button_daftar">Daftar Sekarang</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_fund">Dana</string>
    <string name="nav_user">Profil</string>

    <!-- bug fix, leave it there -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <string name="pinjam_500">Rp. 500.000,-</string>
    <string name="pinjam_1000">Rp. 1.000.000,-</string>
    <string name="pinjam_1500">Rp. 1.500.000,-</string>
    <string name="nav_notif">Notifikasi</string>

    <!--here much data-->
    <string name="detail_aturan">
        1. Layanan Pinjam Meminjam Berbasis Teknologi Informasi merupakan kesepakatan perdata antara Pemberi Pinjaman dengan Penerima Pinjaman, sehingga segala risiko yang timbul dari kesepakatan tersebut ditanggung sepenuhnya oleh masing-masing pihak.
        \n \n 2. Risiko kredit atau gagal bayar ditanggung sepenuhnya oleh Pemberi Pinjaman. Tidak ada lembaga atau otoritas negara yang bertanggung jawab atas risiko gagal bayar ini.
        \n \n 3. Penyelenggara dengan persetujuan dari masing-masing Pengguna (Pemberi Pinjaman dan/atau Penerima Pinjaman) mengakses, memperoleh, menyimpan, mengelola dan/atau menggunakan data pribadi Pengguna ("Pemanfaatan Data") pada atau di dalam benda, perangkat elektronik (termasuk smartphone atau telepon seluler), perangkat keras (hardware) maupun lunak (software), dokumen elektronik, aplikasi atau sistem elektronik milik Pengguna atau yang dikuasai Pengguna, dengan memberitahukan tujuan, batasan dan mekanisme Pemanfaatan Data tersebut kepada Pengguna yang bersangkutan sebelum memperoleh persetujuan yang dimaksud.
        \n \n 4. Pemberi Pinjaman yang belum memiliki pengetahuan dan pengalaman pinjam meminjam, disarankan untuk tidak menggunakan layanan ini.
        \n \n 5. Penerima Pinjaman harus mempertimbangkan tingkat bunga pinjaman dan biaya lainnya sesuai dengan kemampuan dalam melunasi pinjaman.
        \n \n 6. Setiap kecurangan tercatat secara digital di dunia maya dan dapat diketahui masyarakat luas di media sosial.
        \n \n 7. Pengguna harus membaca dan memahami informasi ini sebelum membuat keputusan menjadi Pemberi Pinjaman atau Penerima Pinjaman
        \n \n 8. Pemerintah yaitu dalam hal ini Otoritas Jasa Keuangan, tidak bertanggung jawab atas setiap pelanggaran atau ketidakpatuhan oleh Pengguna, baik Pemberi Pinjaman maupun Penerima Pinjaman (baik karena kesengajaan atau kelalaian Pengguna) terhadap ketentuan peraturan perundang-undangan maupun kesepakatan atau perikatan antara Penyelenggara dengan Pemberi Pinjaman dan/atau Penerima Pinjaman.
        \n \n 9. Setiap transaksi dan kegiatan pinjam meminjam atau pelaksanaan kesepakatan mengenai pinjam meminjam antara atau yang melibatkan Penyelenggara, Pemberi Pinjaman dan/atau Penerima Pinjaman wajib dilakukan melalui escrow account dan virtual account sebagaimana yang diwajibkan berdasarkan Peraturan Otoritas Jasa Keuangan Nomor 77/POJK.01/2016 tentang Layanan Pinjam Meminjam Uang Berbasis Teknologi Informasi dan pelanggaran atau ketidakpatuhan terhadap ketentuan tersebut merupakan bukti telah terjadinya pelanggaran hukum oleh Penyelenggara sehingga Penyelenggara wajib menanggung ganti rugi yang diderita oleh masing-masing Pengguna sebagai akibat langsung dari pelanggaran hukum tersebut di atas tanpa mengurangi hak Pengguna yang menderita kerugian menurut Kitab Undang-Undang Hukum Perdata.
    </string>

    <string name="setujui_aturan">
        Anda mengakui bahwa apabila Anda tidak memberikan informasi atau data yang relevan atau menarik persetujuan sehubungan dengan pengumpulan, penggunaan dan/atau pengungkapan informasi atau data yang relevan sebagaimana dijelaskan dalam Perjanjian ini, kami berpeluang untuk tidak dapat membuka atau melanjutkan akun Anda, atau mengakses aplikasi kami.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
