<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Albert Kristaen (s6joxx) on 2/10/21, 9:45 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 10/22/20, 11:34 AM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/peminjam_nav_home"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/peminjam_nav_fund"
        android:icon="@drawable/nav_fund"
        android:title="@string/nav_fund" />
    <item
        android:id="@+id/peminjam_nav_notif"
        android:icon="@drawable/nav_notif"
        android:title="@string/nav_notif" />
    <item
        android:id="@+id/peminjam_nav_user"
        android:icon="@drawable/nav_user"
        android:title="@string/nav_user" />
</menu>