<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Albert Kristaen (s6joxx) on 10/22/20, 11:34 AM
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 7/5/20, 3:13 AM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pendana_nav_home"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/pendana_nav_fund"
        android:icon="@drawable/nav_fund"
        android:title="@string/nav_fund" />
    <item
            android:id="@+id/pendana_nav_notif"
            android:icon="@drawable/nav_notif"
            android:title="@string/nav_notif" />
    <item
        android:id="@+id/pendana_nav_user"
        android:icon="@drawable/nav_user"
        android:title="@string/nav_user" />

</menu>