<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity"
    android:background="@drawable/gradient_background"
    android:theme="@style/AppTheme">

    <ImageView
        android:id="@+id/logo_splash"
        android:layout_width="301dp"
        android:layout_height="326dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/splash_title"
        android:textAlignment="center"
        android:textColor="@color/text_main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/logo_ojk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_splash"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/splash_subtittle"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <ImageView
        android:id="@+id/logo_ojk"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/splash_ojk"
        android:src="@drawable/ojk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>